--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -927,3 +927,75 @@
 			}
 		}
 	}
+
+
+/* Ghost */
+
+/* Loop */
+
+.post-loop{
+    header{
+        h2{
+            margin:0 0 0.65em 0;
+        }
+
+        h2 + p{
+            font-size:0.9em;
+            margin-bottom:0;
+        }
+    }
+
+    article{
+        margin:0 0 1em 0;
+        min-height:100px;
+    }
+
+    .pagination{
+        width:100%;
+        text-align:center;
+        position:relative;
+
+        .older-posts, .newer-posts{
+            @extend .button;
+            @extend .special;
+            position:absolute;
+        }
+
+        .older-posts{
+            right:0;
+        }
+
+        .newer-posts{
+            left:0;
+        }
+    }
+}
+
+
+/* Page */
+
+.page-header{
+    text-align:center;
+
+    h2{
+        font-size:2.5em;
+    }
+}
+
+/* Author */
+
+.author-image{
+    img{
+        width:100%;
+        height:auto;
+    }
+}
+
+.author-meta{
+    @extend header;
+}
+
+
+
+
+
