Added "Home" to navigation menu.

--- a/partials/menu.hbs
+++ b/partials/menu.hbs
@@ -1,5 +1,13 @@
 {{!Begin Menu Item}}
-<li class="active">
+<li>
+	<a href="{{@blog.url}}"> <!-- Do not change to keep as {{@blog.url}}" for Home-->
+		Home <!-- Change menu item text -->
+	</a>
+</li>
+{{!End Menu Item}}
+
+{{!Begin Menu Item}}
+<li>
 	<a href="#top"> <!-- Do not change to keep as {{@blog.url}}" for Home-->
 		Top <!-- Change menu item text -->
 	</a>
