--- a/partials/intro/intro-default.hbs
+++ b/partials/intro/intro-default.hbs
@@ -1,11 +1,1 @@
-<!-- Main Page Intro -->
-<!-- Banner -->
-<section id="banner">
-    <h2>I'm Baseline for Ghost</h2>
-    <p>A simple starting point for projects based on Skel and Ghost.</p>
-    <ul class="actions">
-        <li><a href="#content" class="button special">Content</a></li>
-        <li><a href="#elements" class="button">Elements</a></li>
-        <li><a href="#grid" class="button alt">Grid System</a></li>
-    </ul>
-</section>
+<!-- Main Page Feature Post and Loop -->
