--- a/partials/menu.hbs
+++ b/partials/menu.hbs
@@ -9,7 +9,7 @@
 {{!Begin Menu Item}}
 <li>
 	<a href="#top"> <!-- Do not change to keep as {{@blog.url}}" for Home-->
-		Top <!-- Change menu item text -->
+		About <!-- Change menu item text -->
 	</a>
 </li>
 {{!End Menu Item}}
@@ -17,32 +17,7 @@
 {{!Begin Menu Item}}
 <li>
 	<a href="#content"> <!-- Over on the left, change to your static url text {{@blog.url}}/your-url-slug-->
-		Content <!-- Change menu item text -->
+		Contact <!-- Change menu item text -->
 	</a>
 </li>
 {{!End Menu Item}}
-
-{{!Begin Menu Item}}
-<li>
-	<a href="#elements"> <!-- Over on the left, change to your static url text {{@blog.url}}/your-url-slug-->
-		Elements <!-- Change menu item text -->
-	</a>
-</li>
-{{!End Menu Item}}
-
-{{!Begin Menu Item}}
-<li>
-	<a href="#grid"> <!-- Over on the left, change to your static url text {{@blog.url}}/your-url-slug-->
-		Grid <!-- Change menu item text -->
-	</a>
-</li>
-{{!End Menu Item}}
-
-{{!Begin Menu Item}}
-<li>
-	<a href="//getskel.com" class="button special"> <!-- Over on the left, change to your static url text {{@blog.url}}/your-url-slug-->
-		Download <!-- Change menu item text -->
-	</a>
-</li>
-{{!End Menu Item}}
-{{!Create Menu Item}}
