--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -8,7 +8,8 @@
 	$size-element-margin:		2em;
 
 // Font.
-	$font-family:				Arial, Helvetica, sans-serif;
+	$font-family:				'Merriweather Sans', Arial, Helvetica, sans-serif;
+    $font-family-display:       'Megrim', Arial, Helvetica, sans-serif;
 	$font-family-fixed:			'Courier New', monospace;
 	$font-weight:				normal;
 	$font-weight-bold:			bold;
@@ -23,7 +24,7 @@
 	$color-border2:				rgba(144,144,144,0.5);
 	$color-border2-bg:			rgba(144,144,144,0.2);
 
-	$color-accent-bg:			#49bf9d;
+	$color-accent-bg:			#8CD9D3;
 	$color-accent-fg:			mix($color-accent-bg, #ffffff, 25%);
 	$color-accent-fg-bold:		#ffffff;
 	$color-accent-fg-light:		mix($color-accent-bg, #ffffff, 40%);
