--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -190,6 +190,9 @@
 
         &.section-header{
             text-align:left;
+            h1,h2,h3,h4,h5,h6{
+                margin:0;
+            }
         }
 	}
 
@@ -845,7 +848,7 @@
 	}
 
     #sub-header{
-        height:2.75em;
+        min-height:2.75em;
         line-height:2.75em;
         border-top:solid 1px #ccc;
         border-bottom:solid 1px #ccc;
