--- a/assets/css/style-small.css
+++ b/assets/css/style-small.css
@@ -30,4 +30,12 @@ body, input, select, textarea {
     padding-left: 0;
     display: block; }
 
+/* line 46, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
+.loop-excerpt .post-header h3.post-featured {
+  padding-bottom: 1em; }
+  /* line 48, /Users/alex/Documents/ghost-aventurine/content/themes/aventurine/assets/sass/style-small.scss */
+  .loop-excerpt .post-header h3.post-featured::after {
+    display: block;
+    margin-left: 0; }
+
 /*# sourceMappingURL=style-small.css.map */
