--- a/assets/sass/style-medium.scss
+++ b/assets/sass/style-medium.scss
@@ -1,12 +1,10 @@
 @import 'vars';
 @import 'mixins';
 
-/* skel-baseline v2.0.0 | (c) n33 | getskel.com | MIT licensed */
-
 /* Basic */
 
 	body, input, select, textarea {
-		font-size: 12pt;
+		font-size: 11pt;
 	}
 
 /* Header */
@@ -17,7 +15,10 @@
 	}
 
 	#header {
-		display: none;
+        h1{
+            position:relative;
+            font-size:1.25em;
+        }
 	}
 
 /* Banner */
