--- a/assets/sass/style-xsmall.scss
+++ b/assets/sass/style-xsmall.scss
@@ -65,3 +65,18 @@
 	#banner {
 		padding: 5em 2em 4em 2em;
 	}
+
+    #header{
+        margin:6em 0 3em 0;
+        h1{
+            font-size:1em;
+        }
+    }
+
+    #sub-header{
+        margin-bottom:1em;
+    }
+
+    .feature-image{
+        height:auto;
+    }
